# mechphy-gnss-tracker-platform

./: AGENTS.md  README.md
command-center-app/: README.md  pyproject.toml  requirements.txt
command-center-app/src/mechphy_command_center/: __init__.py  app.py  main.py  map_model.py  simulator.py  storage.py  telemetry_protocol.py  xbee_api.py
command-center-app/tests/: test_map_model.py  test_simulator.py  test_storage.py  test_telemetry_protocol.py  test_xbee_api.py
docs/: README.md
firmware/: Makefile  README.md
firmware/include/: crc16.h  telemetry_packet.h  xbee_api.h
firmware/src/: crc16.c  telemetry_packet.c  xbee_api.c
firmware/tests/: test_crc16.c  test_telemetry_packet.c  test_xbee_api.c
gis-engine/: README.md
hardware-profiles/: README.md
rf-engine/: README.md
telemetry-protocol/: README.md  telemetry_protocol_v1.md
test-data/: README.md  telemetry_gnss_v1_golden.json  xbee_api_escaped_golden.json
test-data/tools/: generate_golden_vectors.py
