[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mechphy-command-center"
version = "0.1.0"
description = "Windows-first MECHPHY GNSS tracker command-centre prototype."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "pyserial>=3.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
